--- a/index.html
+++ b/index.html
@@ -19,14 +19,74 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <main></main>
-    <footer></footer>
-    Meet makes it easy to connect with others face-to-face virtually and
-    collaborate across any device. Download v1.3 What is it? 01 Built for modern
-    use Smarter meetings, all in one place Send messages, share files, show your
-    screen, and record your meetings — all in one workspace. Control who can
-    join with invite-only team access, data encryption, and data export. 02
-    Experience more together Stay connected with reliable HD meetings and
-    unlimited one-on-one and group video sessions. Download v1.3
+    <nav>
+      <img src="./assets/logo.svg" alt="company logo" />
+    </nav>
+    <main>
+      <div class="hero-section">
+        <img
+          class="mobile-tablet-hero-img"
+          src="./assets/tablet/image-hero.png"
+          alt="multiple people circles"
+        />
+        <div class="hero-txt-btn-container">
+          <h1 class="title">Group Chat for Everyone</h1>
+          <p class="hero-description">
+            Meet makes it easy to connect with others face-to-face virtually and
+            collaborate across any device.
+          </p>
+          <button class="btn download-btn">
+            Download <span class="btn-version-no">v1.3</span>
+          </button>
+          <a class="btn what-is-it-link" href="#"> What is it?</a>
+        </div>
+      </div>
+      <div class="step-circle">
+        <div class="line"></div>
+        <div class="circle">01</div>
+      </div>
+      <div class="feature-section1">
+        <div class="img-container">
+          <img
+            src="./assets/desktop/image-woman-in-videocall.jpg"
+            alt="woman on video call"
+          />
+          <img
+            src="./assets/desktop/image-women-videochatting.jpg"
+            alt="group of women chatting"
+          />
+
+          <img
+            src="./assets/desktop/image-men-in-meeting.jpg"
+            alt="man in meeting video call"
+          />
+          <img
+            src="./assets/desktop/image-man-texting.jpg"
+            alt="man texting on phone"
+          />
+        </div>
+        <p class="built-txt">Built for modern use</p>
+        <h2 class="subtitle">Smarter meetings, all in one place</h2>
+        <p class="feature-description">
+          Send messages, share files, show your screen, and record your meetings
+          — all in one workspace. Control who can join with invite-only team
+          access, data encryption, and data export.
+        </p>
+      </div>
+      <div class="step-circle">
+        <div class="line"></div>
+        <div class="circle">02</div>
+      </div>
+    </main>
+    <footer>
+      <h2 class="footer-subtitle">Experience more together</h2>
+      <p class="footer-description">
+        Stay connected with reliable HD meetings and unlimited one-on-one and
+        group video sessions.
+      </p>
+      <button class="btn purple-download-btn">
+        Download <span class="btn-version-no">v1.3</span>
+      </button>
+    </footer>
   </body>
 </html>
